<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/parking"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/indigo_daisy"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_box_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_box_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_box_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/re_type_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/text_box_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/re_type_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/white"
            android:text="@string/sing_up"/>

        <TextView
            android:id="@+id/back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/got_to_login"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>