<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_login"
        android:textSize="50sp"
        android:fontFamily="@font/indigo_daisy"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_above="@id/username"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/parking"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="text"
        android:fontFamily="@font/roboto_regular"
        android:layout_above="@id/password"
        android:background="@drawable/text_box_custom"
        android:textSize="15sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/text_box_custom"
        android:textSize="15sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/swipe_right"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>